# agentcore-multi-agent-showcase

./: .gitignore  README.md
agentcore-agents/: pyproject.toml
agentcore-agents/alpaca_farm_multi_agent_example/: .bedrock_agentcore.yaml  Dockerfile  alpaca_farm_assistant.py  farm_assistant.py  index.md  multi_agent_example.md  requirements.txt  run_langsmith_evaluation.py
agentcore-agents/alpaca_farm_multi_agent_example/guardrails/: INTEGRATION_GUIDE.md  README.md  SETUP_INSTRUCTIONS.md  __init__.py  alpaca_farm_guardrails_example.py  config.example.py  guardrails_client.py  guardrails_config.py  guardrails_middleware.py  test_guardrails.py
agentcore-agents/alpaca_farm_multi_agent_example/langsmith_evaluation/: LANGSMITH_EVALUATION.md  README.md  __init__.py  example_usage.py  langsmith_config.py  langsmith_evaluation.py  remote_client.py  run_evaluation.py  run_full_async_evaluation.py  runtime_config.py  setup_langsmith.sh  test_async_evaluation.py  test_langsmith_connection.py
agentcore-agents/basic-strands-agent/: README.md
agentcore-agents/basic_mcp_examples/: alpaca_farm_mgmt_assistant.py  gateway_in_agent.py  mcp_gateway_test.py  requirements.txt  utils.py
agentcore-agents/basic_strands_agent/: .bedrock_agentcore.yaml  Dockerfile
agentcore-agents/strands_multi_agent_example/: .bedrock_agentcore.yaml  Dockerfile  alpaca_farm_mgmt_assistant.py  teachers_assistant.py
alpaca-farm-mgmt-storage/: .deployment-info  .samignore  README-AWS.md  (+22 more)
nova-sonic-web-app/backend/: README.md  agent_integration.py  main.py  nova_sonic_manager.py  pyproject.toml  tool_extensions.py
(+176 files in other folders)
