[project]
name = "nova-sonic-web-backend"
version = "0.1.0"
description = "Nova Sonic Web App Backend - Speech-to-Speech AI Agent Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "python-jose[cryptography]>=3.3.0",
    "pytz>=2023.3",
    "aws-sdk-bedrock-runtime>=0.0.1",
    "smithy-aws-core>=0.0.1",
]

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "httpx>=0.25.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "*.py",
    "README.md"
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
